# genai-bootcamp-curriculum

./: .gitignore  README.md  environment.yml  flash_attn-2.5.8-cp312-cp312-linux_x86_64.whl  locked-environment.yml  setup.sh  setup_aws.sh  setup_gcp.sh
1-daily-exercises/finetuning-exercise/: Exercise_finetune_data_prep.ipynb
1-daily-exercises/rag-exercise/: RAG_workflow.ipynb  Synthetic_data_creator.py
1-daily-exercises/synthetic-data-exercise/: Synthetic_data_creator.py  demo.ipynb
1-daily-exercises/synthetic-data-exercise/data/: generated_table_structures_with_original_data_low_t.csv
2-capstone/1-vectordb/: README.md
2-capstone/1-vectordb/notebooks/: Document Embeddings and Vector DB.ipynb
2-capstone/1-vectordb/scripts/: embed.py  query.py
2-capstone/2-rag-prompt-engineering/: README.md
2-capstone/2-rag-prompt-engineering/data/: fake_data_systems_tables.csv  fixed_generated_table_structures_with_original_data.csv
2-capstone/2-rag-prompt-engineering/notebooks/: RAG.ipynb
2-capstone/2-rag-prompt-engineering/scripts/: rag.py
2-capstone/3-finetuning-for-rag/: README.md
2-capstone/3-finetuning-for-rag/notebooks/: Instruction Finetuning LLMs with QLoRA for RAG.ipynb  RAG with QLoRA.ipynb
genai-bootcamp-curriculum/0-getting-started/: GenAI Bootcamp Capstone Environment Access Commands.txt
genai-bootcamp-curriculum/1-daily-exercises/langchain-intro-master/langchain-intro-master/: config.py  pyproject.toml
genai-bootcamp-curriculum/1-daily-exercises/langchain-intro-master/langchain-intro-master/notebooks/: langchain_tutorial.ipynb
(+25 files in other folders)
